--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,15 +142,17 @@ header {
 .abogados{
     display: flex;
     justify-content: center;
-    gap: var(--spacing-medium);
-    flex-wrap: wrap;
+    
+
 }
 
 .bio{
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 clamp(300px, 30%, 400px);
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
 }
+
 
 h1{
     font-size: var(--text-medium);
