--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@
 
     /*colors*/
     --primary:#030303;
-    --secondary: #2117aaa9;
+    --secondary: hsl(219, 96%, 39%);
     --alternative: #615f83a9;
 
 }
@@ -89,7 +89,7 @@ header {
     justify-content: space-around;
     align-items: center;
     padding: var(--spacing-small);
-    border-bottom: 2px solid var(--primary);
+    border-bottom: 1px solid var(--primary);
 
 }
 
@@ -107,12 +107,14 @@ header {
 .menu__link{
     font-size: var(--text-medium);
     padding: var(--spacing-small);
-    border: 2px solid white;
-    transition: all 1s;
+    border: 1px solid white;
+    transition: all 0.5s;
 }
 
 .menu__link:hover{
     border-color: var(--secondary);
+    color: var(--secondary);
+    font-weight: bold;
 }
 
 
@@ -122,9 +124,8 @@ header {
 
 .main {
     grid-area: main;
-    /*max-width: 1200px;
-    margin: 5rem auto;
-    display: flex;*/
+    margin: var(--spacing-small);
+    display: flex;
     justify-content: space-between;
    
 }
@@ -135,23 +136,25 @@ header {
 
 .footer{
     grid-area: footer;
-    font-size: var(--text-medium);
+    font-size: var(--text-small);
+    font-weight: bold;
 }
 
 
 .abogados{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     
 
 }
 
 .bio{
    display: flex;
-   justify-content: center;
+   justify-content:center;
    flex-direction: column;
-   align-items: center;
+   
 }
+
 
 
 h1{
@@ -159,15 +162,33 @@ h1{
 }
 
 
-/*--------FORM CONTACTO----------*/
-.formContacto{
-    font-size: var(--text-medium);
+
+/*----------------AREAS------------*/
+.areas{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.div__area{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.areas__img{
+    transition: all 0.5s;
+}
+
+.areas__img:hover{
+    translate: 0px 30px;
 }
 
 
-
-
-
+/*--------FORM CONTACTO----------*/
+.formContacto{
+    font-size: var(--text-small);
+}
 
 
 
